ie fix on mobile for contact form icons

--- a/dev/css/application.css
+++ b/dev/css/application.css
@@ -1672,38 +1672,25 @@ input[type="password"]:focus {
   margin-bottom: 24px;
   margin-bottom: 2.4rem;
 }
-@media only screen and (min-width: 800px) {
-  .contact__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
+.contact__item::after {
+  clear: both;
+  content: "";
+  display: block;
 }
 
 .contact__info {
-  color: #999;
   padding-top: 6px;
   padding-top: 0.6rem;
   padding-bottom: 6px;
   padding-bottom: 0.6rem;
+  color: #999;
   text-align: center;
 }
 @media only screen and (min-width: 800px) {
   .contact__info {
+    float: right;
+    display: inline-block;
     text-align: right;
-    padding-right: 1.2rem;
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
-    float: left;
   }
 }
 .contact__info--headline {
@@ -1715,24 +1702,35 @@ input[type="password"]:focus {
   margin-bottom: 0;
 }
 
-svg.contact__icon {
-  width: 45px;
-  max-height: 20px;
-  display: block;
+.contact__item--icon {
+  height: 48px;
+  width: 48px;
+  line-height: 1;
+  text-align: center;
+}
+@media only screen and (min-width: 800px) {
+  .contact__item--icon {
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
+    float: right;
+    display: inline-block;
+    margin-left: 1.2rem;
+  }
 }
 @media only screen and (max-width: 800px) {
-  svg.contact__icon {
-    height: 32px;
-    max-height: 32px;
-    padding-bottom: 12px;
-    margin: 0 auto 6px;
+  .contact__item--icon {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0.4rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   }
 }
-@media only screen and (min-width: 800px) {
-  svg.contact__icon {
-    float: right;
-  }
+.contact__item--icon svg {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 50%;
+  fill: #333;
+  height: 48px;
 }
 
 .contact__form {
