--- a/dev/src/scss/modules/_contact.scss
+++ b/dev/src/scss/modules/_contact.scss
@@ -6,26 +6,19 @@
 }
 
 .contact__item {
+  @include grid-container;
   margin-bottom: $base-spacing;
-  @include mq($min-width: 800px) {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row-reverse;
-    align-items: center;
-  }
 }
 
 .contact__info {
-  color: $medium-gray;
   padding-top: $small-spacing / 2;
   padding-bottom: $small-spacing / 2;
+  color: $medium-gray;
   text-align: center;
   @include mq($min-width: 800px) {
+    float: right;
+    display: inline-block;
     text-align: right;
-    // margin-right: $small-spacing;
-    padding-right: $small-spacing;
-    border-right: 1px solid $form-box-border;
-    float: left;
   }
   &--headline {
     @extend %small-footer-font;
@@ -37,19 +30,33 @@
   }
 }
 
-svg.contact__icon {
-  width: 45px;
-  max-height: 20px;
-  display: block;
+.contact__item--icon {
+  height: 48px;
+  width: 48px;
+  line-height: 1;
+  text-align: center;
+  @include mq($min-width: 800px) {
+    border-left: 1px solid $form-box-border;
+    float: right;
+    display: inline-block;
+    margin-left: $small-spacing;
+  }
+
   @include mq($max-width: 800px) {
-    height: 20px + 12px;
-    max-height: 20px + 12px;
-    padding-bottom: 12px;
-    margin: 0 auto 6px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: $small-spacing / 3;
     border-bottom: 1px solid $form-box-border;
   }
-  @include mq($min-width: 800px) {
-    float: right;
+
+  svg {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 50%;
+    fill: #333;
+    // height: 100%;
+    height: 48px;
   }
 }
 
